--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
             <a href="http://soundcloud.com/curtocircuito.cri" target="_blank" class="button">SoundCloud</a>
             <a href="http://youtube.com/curtocircuitocri" target="_blank" class="button">YouTube</a>
             <a href="mailto:curtocircuito.cri@proton.me" class="button">Contato</a>
-            <a href="http://shorgun.com/curtocircuito.cri" target="_blank" class="button">Shotgun</a>
+            <a href="https://shotgun.live/pt-br/venues/curto-circuito-cri" target="_blank" class="button">Shotgun</a>
             <a href="https://open.spotify.com/user/31abiogejknk74ybllr6uzwbth3m?si=O83O_vqmSPGPPczbR9nkZg" target="_blank" class="button">Spotify</a>
             <a href="#sobre" class="button">Sobre Nós</a>
+              <a href="https://shotgun.live/pt-br/events/curto-c-ircuito" target="_blank" class="button">Próximo Evento</a>
         </div>
 
         <div class="spotify-container">
