--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="social-buttons">
             <a href="http://instagram.com/curtocircuito.cri" target="_blank" class="button">Instagram</a>
             <a href="http://soundcloud.com/curtocircuito.cri" target="_blank" class="button">SoundCloud</a>
-            <a href="http://youtube.com/curtocircuitocri" target="_blank" class="button">YouTube</a>
+            <a href="http://youtube.com/@curtocircuitocri" target="_blank" class="button">YouTube</a>
             <a href="mailto:curtocircuito.cri@proton.me" class="button">Contato</a>
             <a href="https://shotgun.live/pt-br/venues/curto-circuito-cri" target="_blank" class="button">Shotgun</a>
             <a href="https://open.spotify.com/user/31abiogejknk74ybllr6uzwbth3m?si=O83O_vqmSPGPPczbR9nkZg" target="_blank" class="button">Spotify</a>
