--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <div class="social-buttons">
             <a href="http://instagram.com/curtocircuito.cri" target="_blank" class="button">Instagram</a>
-            <a href="http://soundcloud.com/curtocircuito.cri" target="_blank" class="button">SoundCloud</a>
+            <a href="https://soundcloud.com/curtocircuito-cri" target="_blank" class="button">SoundCloud</a>
             <a href="http://youtube.com/@curtocircuitocri" target="_blank" class="button">YouTube</a>
             <a href="mailto:curtocircuito.cri@proton.me" class="button">Contato</a>
             <a href="https://shotgun.live/pt-br/venues/curto-circuito-cri" target="_blank" class="button">Shotgun</a>
