--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
             background: radial-gradient(circle at 50% 50%, rgba(0,0,0,0.5), #000);
             pointer-events: none;
             z-index: -1;
-        }
-    </style>
+       </style>
 </head>
 <body>
     <div class="background-overlay"></div>
@@ -217,11 +216,7 @@
 
     <div class="content-wrapper">
         <header class="header">
-    <div class="content-wrapper">
-        <header class="header">
-           
             <h1>Curto Circuito</h1>
-      
         </header>
 
         <div class="social-buttons">
@@ -231,21 +226,18 @@
             <a href="mailto:curtocircuito.cri@proton.me" class="button">Contato</a>
             <a href="https://shotgun.live/pt-br/venues/curto-circuito-cri" target="_blank" class="button">Shotgun</a>
             <a href="https://open.spotify.com/user/31abiogejknk74ybllr6uzwbth3m?si=O83O_vqmSPGPPczbR9nkZg" target="_blank" class="button">Spotify</a>
-            <a href="#sobre" class="button">Sobre Nós</a>
+            <a href="#" class="button" id="sobreButton">Sobre Nós</a>
             <a href="https://shotgun.live/pt-br/events/curto-c-ircuito" target="_blank" class="button">Próximo Evento</a>
         </div>
 
         <div class="spotify-container">
             <iframe
-                src="https://open.spotify.com/embed/playlist/4hvfoHE0beRXDCiuaHpZxO?utm_source=generator&theme=0"
+                src="https://open.spotify.com/embed/playlist/4hvfoHE0beRXDCiuaHpZxO?utm_source=generator&theme=0&autoplay=1"
                 width="100%"
                 height="352"
                 allowfullscreen=""
                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                 loading="lazy">
-            </iframe>
-        </div>
-    </div>
 
     <script>
         function createLightningBolt() {
